--- a/styles/biostyle.css
+++ b/styles/biostyle.css
@@ -1,176 +1,143 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #111;
-}
-
 body {
-font: 400 15px/1.8 Lato, sans-serif;
-color: #777;
+    font: 400 15px/1.8 Lato, sans-serif;
+    background-color: #AAAAAA;
 }
-
 h3, h4 {
-margin: 10px 0 30px 0;
-letter-spacing: 10px;
-font-size: 20px;
-color: paleturquoise;
+    margin: 10px 0 30px 0;
+    letter-spacing: 10px;
+    font-size: 20px;
+    color: paleturquoise;
 }
-
 .container {
-padding: 80px 120px;
+    padding: 80px 120px;
 }
-
 .person {
-border: 10px solid transparent;
-margin-bottom: 25px;
-width: 80%;
-height: 80%;
-opacity: 0.7;
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 80%;
+    height: 80%;
+    opacity: 0.7;
 }
-
 .person:hover {
-border-color: paleturquoise;
+    border-color: paleturquoise;
 }
-
 .carousel-inner img {
--webkit-filter: grayscale(90%);
-filter: grayscale(90%); /* make all photos black and white */
-width: 100%; /* Set width to 100% */
-margin: auto;
+    -webkit-filter: grayscale(90%);
+    filter: grayscale(90%); /* make all photos black and white */
+    width: 100%; /* Set width to 100% */
+    margin: auto;
 }
-
 .carousel-caption h3 {
-color: #fff !important;
+    color: #fff !important;
 }
-
 @media (max-width: 600px) {
-.carousel-caption {
-display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+  .carousel-caption {
+    display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+  }
 }
-}
-
 .bg-1 {
-background: paleturquoise;
-color: silver;
+    background: paleturquoise;
+    color: silver;
 }
-
 .bg-1 h3 {color: #fff;}
 .bg-1 p {font-style: italic;}
 .list-group-item:first-child {
-border-top-right-radius: 0;
-border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
 }
 .list-group-item:last-child {
-border-bottom-right-radius: 0;
-border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
 }
 .thumbnail {
-padding: 0 0 15px 0;
-border: none;
-border-radius: 0;
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
 }
 .thumbnail p {
-margin-top: 15px;
-color: #555;
+    margin-top: 15px;
+    color: #555;
 }
 .btn {
-padding: 10px 20px;
-background-color: #333;
-color: #f1f1f1;
-border-radius: 0;
-transition: .2s;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #f1f1f1;
+    border-radius: 0;
+    transition: .2s;
 }
 .btn:hover, .btn:focus {
-border: 1px solid #333;
-background-color: #fff;
-color: #000;
+    border: 1px solid #333;
+    background-color: #fff;
+    color: #000;
 }
 .modal-header, h4, .close {
-background-color: #333;
-color: #fff !important;
-text-align: center;
-font-size: 30px;
+    background-color: #333;
+    color: #fff !important;
+    text-align: center;
+    font-size: 30px;
 }
 .modal-header, .modal-body {
-padding: 40px 50px;
+    padding: 40px 50px;
 }
 .nav-tabs li a {
-color: #777;
+    color: #777;
 }
 #googleMap {
-width: 100%;
-height: 400px;
--webkit-filter: grayscale(100%);
-filter: grayscale(100%);
+    width: 100%;
+    height: 400px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 .navbar {
-font-family: Montserrat, sans-serif;
-margin-bottom: 0;
-background-color: transparent;
-border: 0;
-font-size: 11px !important;
-letter-spacing: 4px;
-opacity: 0.9;
+    font-family: Montserrat, sans-serif;
+    margin-bottom: 0;
+    background-color: transparent;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 4px;
+    opacity: 0.9;
 }
 .navbar li a, .navbar .navbar-brand {
-color: silver !important;
+    color: silver !important;
 }
 .navbar-nav li a:hover {
-color: lightseagreen !important;
+    color: lightseagreen !important;
 }
 .navbar-nav li.active a {
-color: #fff !important;
-background-color: #29292c !important;
+    color: #fff !important;
+    background-color: #29292c !important;
 }
 .navbar-default .navbar-toggle {
-border-color: transparent;
+    border-color: transparent;
 }
 .open .dropdown-toggle {
-color: #fff;
-background-color: #fff !important;
+    color: #fff;
+    background-color: #fff !important;
 }
 .dropdown-menu li a {
-color: #000 !important;
+    color: #000 !important;
 }
 .dropdown-menu li a:hover {
-background-color: red !important;
+    background-color: red !important;
 }
 footer {
-background-color: ;
-color: #f5f5f5;
-padding: 32px;
+    background-color: ;
+    color: #f5f5f5;
+    padding: 32px;
 }
 footer a {
-color: #f5f5f5;
+    color: #f5f5f5;
 }
 footer a:hover {
-color: #777;
-text-decoration: none;
+    color: #777;
+    text-decoration: none;
 }
 .form-control {
-border-radius: 0;
+    border-radius: 0;
 }
 textarea {
-resize: none;
-We would like to create a message board for restaurants and those who are hunger and don’t have many opportunities to afford food of higher quality or get it for free. Our website will as well involve the audience to think about how they can create change in the issue of hunger.
+    resize: none;
+    We would like to create a message board for restaurants and those who are hunger and don’t have many opportunities to afford food of higher quality or get it for free. Our website will as well involve the audience to think about how they can create change in the issue of hunger.
 
 
 }
