html changes to home page

--- a/styles/main.css
+++ b/styles/main.css
@@ -52,7 +52,8 @@ main, #messages-card {
   padding-bottom: 0;
 }
 #messages-card {
-  margin-top: 15px;
+  margin: 15px auto;
+  width: 90%;
 }
 .mdl-layout__header-row span {
   margin-left: 15px;
