--- a/styles/biostyle.css
+++ b/styles/biostyle.css
@@ -6,7 +6,7 @@ h3, h4 {
     margin: 10px 0 30px 0;
     letter-spacing: 10px;
     font-size: 20px;
-    color: paleturquoise;
+    color: turquoise;
 }
 .container {
     padding: 80px 120px;
@@ -20,7 +20,7 @@ h3, h4 {
 }
 
 .person:hover {
-    border-color: paleturquoise;
+    border-color: turquoise;
 }
 
 .carousel-inner img {
@@ -72,7 +72,7 @@ h3, h4 {
 }
 .btn {
     padding: 10px 20px;
-    background-color: #333;
+    background-color: #111;
     color: #f1f1f1;
     border-radius: 0;
     transition: .2s;
@@ -110,7 +110,7 @@ h3, h4 {
     opacity: 0.9;
 }
 .navbar li a, .navbar .navbar-brand {
-    color: silver !important;
+    color: #111 !important;
 }
 .navbar-nav li a:hover {
     color: lightseagreen !important;
